# python-with-rust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  speed-test.ipynb
config/: requirements.txt
python_package/: __init__.py
python_with_rust/: __init__.py
src/: lib.rs
tests/: test_test.py
